PP-8125 Smartpay - Get credentials by payment provider